objects/Engage_Scoping_And_Engage_Standard__c.object
<CustomObject>
    <fields>
        <fullName>If_Yes_Specify_BEP_Administrator__c</fullName>
        <inlineHelpText>If Benefits Enrollment Platform is Yes, Specify Administrator</inlineHelpText>
        <label>If Yes, Specify BEP Administrator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADP (Link only)</fullName>
                </value>
                <value>
                    <fullName>Alight-Upoint/TBA PLTFRM (AON)</fullName>
                </value>
                <value>
                    <fullName>BCI</fullName>
                </value>
                <value>
                    <fullName>Benefitfocus</fullName>
                </value>
                <value>
                    <fullName>Benefit Harbor</fullName>
                </value>
                <value>
                    <fullName>Benefit Outsourcing</fullName>
                </value>
                <value>
                    <fullName>Bswift (Link only)</fullName>
                </value>
                <value>
                    <fullName>Buck</fullName>
                </value>
                <value>
                    <fullName>Businessolver</fullName>
                </value>
                <value>
                    <fullName>Cobra Guard</fullName>
                </value>
                <value>
                    <fullName>Conduent</fullName>
                </value>
                <value>
                    <fullName>Empyrean</fullName>
                </value>
                <value>
                    <fullName>Fidelity (Link only)</fullName>
                </value>
                <value>
                    <fullName>Gallagher</fullName>
                </value>
                <value>
                    <fullName>Mercer</fullName>
                </value>
                <value>
                    <fullName>Mercer-MBC platform only</fullName>
                </value>
                <value>
                    <fullName>Peoplesoft (Link only)</fullName>
                </value>
                <value>
                    <fullName>SAP (Link only)</fullName>
                </value>
                <value>
                    <fullName>Silver Eagle</fullName>
                </value>
                <value>
                    <fullName>Utilipro (Link only)</fullName>
                </value>
                <value>
                    <fullName>Workday (Link only)</fullName>
                </value>
                <value>
                    <fullName>WTW (Link only)</fullName>
                </value>
                <value>
                    <fullName>Xerox</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_Yes_Specify_FSA_Vendor__c</fullName>
        <label>If Yes, Specify FSA Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Act Wise</fullName>
                </value>
                <value>
                    <fullName>Aon</fullName>
                </value>
                <value>
                    <fullName>Bank of America</fullName>
                </value>
                <value>
                    <fullName>BenefitWallet</fullName>
                </value>
                <value>
                    <fullName>ConnectYourCare</fullName>
                </value>
                <value>
                    <fullName>HealthEquity</fullName>
                </value>
                <value>
                    <fullName>PayFlex</fullName>
                </value>
                <value>
                    <fullName>SelectAccount</fullName>
                </value>
                <value>
                    <fullName>WageWorks</fullName>
                </value>
                <value>
                    <fullName>WellsFargo</fullName>
                </value>
                <value>
                    <fullName>Wex Health</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_Yes_Specify_HRA_Vendor__c</fullName>
        <label>If Yes, Specify HRA Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Act Wise</fullName>
                </value>
                <value>
                    <fullName>Aon</fullName>
                </value>
                <value>
                    <fullName>Bank of America</fullName>
                </value>
                <value>
                    <fullName>BenefitWallet</fullName>
                </value>
                <value>
                    <fullName>ConnectYourCare</fullName>
                </value>
                <value>
                    <fullName>HealthEquity</fullName>
                </value>
                <value>
                    <fullName>PayFlex</fullName>
                </value>
                <value>
                    <fullName>SelectAccount</fullName>
                </value>
                <value>
                    <fullName>WageWorks</fullName>
                </value>
                <value>
                    <fullName>WellsFargo</fullName>
                </value>
                <value>
                    <fullName>Wex Health</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_Yes_Specify_HSA_Vendor__c</fullName>
        <label>If Yes, Specify HSA Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Act Wise</fullName>
                </value>
                <value>
                    <fullName>Aon</fullName>
                </value>
                <value>
                    <fullName>Bank of America</fullName>
                </value>
                <value>
                    <fullName>BenefitWallet</fullName>
                </value>
                <value>
                    <fullName>ConnectYourCare</fullName>
                </value>
                <value>
                    <fullName>HealthEquity</fullName>
                </value>
                <value>
                    <fullName>PayFlex</fullName>
                </value>
                <value>
                    <fullName>SelectAccount</fullName>
                </value>
                <value>
                    <fullName>WageWorks</fullName>
                </value>
                <value>
                    <fullName>WellsFargo</fullName>
                </value>
                <value>
                    <fullName>Wex Health</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_Yes_Specify_OC_Administrator__c</fullName>
        <inlineHelpText>If Yes, Specify Onsite Clinics Administrator</inlineHelpText>
        <label>If Yes, Specify OC Administrator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CHS</fullName>
                </value>
                <value>
                    <fullName>Healthcare Clinic</fullName>
                </value>
                <value>
                    <fullName>HealthSmart</fullName>
                </value>
                <value>
                    <fullName>Infinity (Community Hospital)</fullName>
                </value>
                <value>
                    <fullName>OnSite Care</fullName>
                </value>
                <value>
                    <fullName>OurHealth / TakeCare Clinics</fullName>
                </value>
                <value>
                    <fullName>Paladina Health</fullName>
                </value>
                <value>
                    <fullName>Premise Health</fullName>
                </value>
                <value>
                    <fullName>QuadMex</fullName>
                </value>
                <value>
                    <fullName>Vera</fullName>
                </value>
                <value>
                    <fullName>WholeHealthMD.com</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_Yes_Which_Vendor_Used_Today__c</fullName>
        <inlineHelpText>If Yes, Which Vendor Does The Client Use Today</inlineHelpText>
        <label>If Yes, Which Vendor Used Today</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VirginPulse</fullName>
                </value>
                <value>
                    <fullName>Limeade</fullName>
                </value>
                <value>
                    <fullName>RedBrick</fullName>
                </value>
                <value>
                    <fullName>Keas</fullName>
                </value>
                <value>
                    <fullName>Vitality</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inbound_SSO_Partners_Desired__c</fullName>
        <label>Inbound SSO Partners Desired</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accolade</fullName>
                </value>
                <value>
                    <fullName>Aetna</fullName>
                </value>
                <value>
                    <fullName>Anthem</fullName>
                </value>
                <value>
                    <fullName>Aon Hewitt</fullName>
                </value>
                <value>
                    <fullName>Benefitfocus</fullName>
                </value>
                <value>
                    <fullName>Benefitsolver</fullName>
                </value>
                <value>
                    <fullName>Benetak</fullName>
                </value>
                <value>
                    <fullName>Bswift(Link Only)</fullName>
                </value>
                <value>
                    <fullName>Buck Consultants</fullName>
                </value>
                <value>
                    <fullName>ConnectYourCare</fullName>
                </value>
                <value>
                    <fullName>Enwisen</fullName>
                </value>
                <value>
                    <fullName>Fidelity</fullName>
                </value>
                <value>
                    <fullName>Health Tap</fullName>
                </value>
                <value>
                    <fullName>HealthEquity</fullName>
                </value>
                <value>
                    <fullName>Healthx</fullName>
                </value>
                <value>
                    <fullName>Limeade</fullName>
                </value>
                <value>
                    <fullName>Neighborhood Health</fullName>
                </value>
                <value>
                    <fullName>Okta</fullName>
                </value>
                <value>
                    <fullName>Rally Health</fullName>
                </value>
                <value>
                    <fullName>RedBrick Health</fullName>
                </value>
                <value>
                    <fullName>Regis</fullName>
                </value>
                <value>
                    <fullName>RightOpt</fullName>
                </value>
                <value>
                    <fullName>Willis Towers Watson</fullName>
                </value>
                <value>
                    <fullName>Xerox</fullName>
                </value>
                <value>
                    <fullName>Bswift</fullName>
                    <isActive>false</isActive>
                    <label>Bswift</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incentives_Budget__c</fullName>
        <label>Incentives Budget</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Includes_Behavioral_Health_Elevate__c</fullName>
        <label>Includes Behavioral Health Elevate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Client_Interested_In_Device_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Client Interested In Device Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Client_Interested_In_Incentives__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Client Interested In Incentives</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Client_Interseted_In_Rewards_Center__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Client Interested In Rewards Center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Inbound_SSO_Required__c</fullName>
        <label>Is Inbound SSO Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Outbound_SSO_Required__c</fullName>
        <label>Is Outbound SSO Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Pharmacy_Included__c</fullName>
        <label>Is Pharmacy Included</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_There_Anthem_Dental__c</fullName>
        <label>Is Anthem Dental Included</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Live_Health_Online_Offering__c</fullName>
        <inlineHelpText>Please choose the correct option based on the client&apos;s utilization of LiveHealth Online.</inlineHelpText>
        <label>Live Health Online Offering</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Live Health Online Medical Only</fullName>
                </value>
                <value>
                    <fullName>Live Health Online Medical + Psychology</fullName>
                </value>
                <value>
                    <fullName>LiveHealth Online Medical + Psychology</fullName>
                    <isActive>false</isActive>
                    <label>LiveHealth Online Medical + Psychology</label>
                </value>
                <value>
                    <fullName>LiveHealth Online Medical Only</fullName>
                    <isActive>false</isActive>
                    <label>LiveHealth Online Medical Only</label>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_Support_Hours_Of_Availability__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Member Support Hours Of Availability</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Support_Phone_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Member Support Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MyHealthAdvantage__c</fullName>
        <inlineHelpText>Please choose Yes or No based on the client&apos;s access to MyHealthAdvantage gaps-in-care.</inlineHelpText>
        <label>My Health Advantage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>National_Networks_Alpha_Prefixes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Specify All Alpha Prefixes Separated By Commas</inlineHelpText>
        <label>National Networks Alpha Prefixes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Networks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>National Networks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Of_Plans__c</fullName>
        <label>Number Of Plans</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Subscribers_Elite_Plus__c</fullName>
        <label>Number Subscribers Elite Plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Subscribers_Elite__c</fullName>
        <label>Number Subscribers Elite</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Subscribers_Essentials_Plus__c</fullName>
        <label>Number Subscribers Essentials Plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Subscribers_Essentials__c</fullName>
        <label>Number Subscribers Essentials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Subscribers_Essentials_non__c</fullName>
        <label>Number Subscribers Essentials (non)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Total_Membership_Elite_Plus__c</fullName>
        <label>Number Total Membership Elite Plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Total_Membership_Elite__c</fullName>
        <label>Number Total Membership Elite</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Total_Membership_Essentials_Plus__c</fullName>
        <label>Number Total Membership Essentials Plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Total_Membership_Essentials__c</fullName>
        <label>Number Total Membership Essentials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Total_Membership_Essentials_non__c</fullName>
        <label>Number Total Membership Essentials (non)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Quote_Name__r.Opportunity.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <formula>Quote_Name__r.Opportunity.OpportunityRecordTypeName__c</formula>
        <label>Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Health_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Health Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outbound_SSO_Partners_Desired__c</fullName>
        <inlineHelpText>Additional Customer Cost May Apply.</inlineHelpText>
        <label>Outbound SSO Partners Desired</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anthem</fullName>
                </value>
                <value>
                    <fullName>Benefitfocus</fullName>
                </value>
                <value>
                    <fullName>Cigna</fullName>
                </value>
                <value>
                    <fullName>ConnectYourCare</fullName>
                </value>
                <value>
                    <fullName>CVS Caremark</fullName>
                </value>
                <value>
                    <fullName>Delta Dental of Washington</fullName>
                </value>
                <value>
                    <fullName>Doctor on Demand</fullName>
                </value>
                <value>
                    <fullName>Express Scripts**</fullName>
                </value>
                <value>
                    <fullName>Health Equity</fullName>
                </value>
                <value>
                    <fullName>HealthPartners</fullName>
                </value>
                <value>
                    <fullName>HSA Bank</fullName>
                </value>
                <value>
                    <fullName>myStrength</fullName>
                </value>
                <value>
                    <fullName>Rally Health</fullName>
                </value>
                <value>
                    <fullName>RedBrick Health</fullName>
                </value>
                <value>
                    <fullName>Rx Savings Solutions</fullName>
                </value>
                <value>
                    <fullName>UnitedHealthcare</fullName>
                </value>
                <value>
                    <fullName>WageWorks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Past_2_Year_Dental_Claim_History__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>FOR ANTHEM DENTAL ONLY
Past 2-year dental claim history for eligible population of Castlight:</inlineHelpText>
        <label>Past 2 Year Dental Claim History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Past_2_Year_Pharmacy_Claim_History__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>FOR ANTHEM RX ONLY
Past 2-year pharmacy claim history for eligible population of Castlight:</inlineHelpText>
        <label>Past 2 Year Pharmacy Claim History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Population_Identifier_Elite_Plus__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Population Identifier Elite Plus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Population_Identifier_Elite__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Population Identifier Elite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Population_Identifier_Essentials__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Population Identifier Essentials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Population_Identifier_Essentials_non__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Population Identifier Essentials (non)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Quote Name</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Engage Scoping And Engage Standard</relationshipLabel>
        <relationshipName>Castlight_Engage_Scoping_And_Standard</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ready_to_Submit_Engage_Scoping_Form__c</fullName>
        <formula>AND(
     AND(  NOT( ISBLANK( Existing_Client_Changes_Effective_Date__c)),
           NOT( ISBLANK(When_Does_Plan_Year_Start__c)),
           NOT( ISBLANK(Client_Preferred_Launch_Date_For_Engage__c)),
           NOT( ISBLANK(IF_EAP_Select_All_That_Apply__c)),
           NOT( ISBLANK(Clinical_Shared_Data_And_Experiences__c))
         ),
      
      AND( NOT( ISPICKVAL(Is_Pharmacy_Included__c,&apos;&apos;)),
           NOT( ISPICKVAL(Anthem_To_Provide_Comm_Support__c,&apos;&apos;)),
           NOT( ISPICKVAL(Client_Integrating_Wellness_Bundle__c,&apos;&apos;)),
           NOT( ISPICKVAL(Anthem_Only_Or_Multi_Carrier__c,&apos;&apos;)), 
           NOT( ISPICKVAL(Is_Pharmacy_Included__c,&apos;&apos;)),
           NOT( ISPICKVAL(Is_There_Anthem_Dental__c,&apos;&apos;)),
           NOT( ISPICKVAL(Client_Have_Own_Wellness_Vendors__c,&apos;&apos;)),
           NOT( ISPICKVAL(Includes_Behavioral_Health_Elevate__c,&apos;&apos;)),
           NOT( ISPICKVAL(Does_Client_Have_Anthem_Health_Rewards__c,&apos;&apos;)),
           NOT( ISPICKVAL(Client_Have_Benefit_Enrollment_Platform__c,&apos;&apos;)),
           NOT( ISPICKVAL(Does_The_Client_Have_Onsite_Clinics__c,&apos;&apos;)),
           NOT( ISPICKVAL(Is_Inbound_SSO_Required__c,&apos;&apos;)),
           NOT( ISPICKVAL(Is_Outbound_SSO_Required__c,&apos;&apos;))
          )
      )</formula>
        <inlineHelpText>Automated Indicator To Display If Minimum Set Of Required Fields For Engage Scoping Have All Been Entered</inlineHelpText>
        <label>Required Fields to Submit are Entered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ready_to_Submit_Engage_Standard_Form__c</fullName>
        <formula>AND(
   AND( NOT(ISBLANK(Member_Support_Phone_Number__c)),
        NOT(ISBLANK(Member_Support_Hours_Of_Availability__c)),
        NOT(ISBLANK(Est_Receipt_Date_Of_1st_Prod_Elig_File__c)),
        NOT(ISBLANK(Start_Date_Of_Customer_Contract__c)),
        NOT(ISBLANK(End_Date_Of_Customer_Contract__c)) 
      ),
   AND(NOT(ISPICKVAL(WebMD_HRA_Program__c,&apos;&apos;)),
       NOT(ISPICKVAL(ASH_Gym_Reimbursement_Buyup__c,&apos;&apos;)),     
       NOT(ISPICKVAL(Anthem_Health_Rewards__c,&apos;&apos;)),
       NOT(ISPICKVAL(Activity_Nutrition_Sleep_Programs__c,&apos;&apos;)),
       NOT(ISPICKVAL(BioIQ__c,&apos;&apos;)),
       NOT(ISPICKVAL(Live_Health_Online_Offering__c,&apos;&apos;)),
       NOT(ISPICKVAL(MyHealthAdvantage__c,&apos;&apos;)),  
       NOT(ISPICKVAL(Anthem_Health_Guide__c,&apos;&apos;))
       )
    )</formula>
        <inlineHelpText>Automated Indicator To Display If Minimum Set Of Required Fields For Engage Standard Have All Been Entered</inlineHelpText>
        <label>Required Fields to Submit are Entered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <formula>RecordType.Name</formula>
        <label>RecordTypeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Availability_During_OE__c</fullName>
        <inlineHelpText>Will Client Be Requesting Registration Availability During Open Enrollment</inlineHelpText>
        <label>Registration Availability During OE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Select_All_Anthem_Dental_That_Apply__c</fullName>
        <label>Select All Anthem Dental That Apply</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aetna Dental</fullName>
                </value>
                <value>
                    <fullName>Delta Dental</fullName>
                </value>
                <value>
                    <fullName>Cigna Dental</fullName>
                </value>
                <value>
                    <fullName>MetLife</fullName>
                </value>
                <value>
                    <fullName>United Concordia</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Select_All_Carriers_That_Apply__c</fullName>
        <label>Select All Carriers That Apply</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aetna Dental</fullName>
                </value>
                <value>
                    <fullName>Delta Dental</fullName>
                </value>
                <value>
                    <fullName>Cigna Dental</fullName>
                </value>
                <value>
                    <fullName>MetLife</fullName>
                </value>
                <value>
                    <fullName>United Concordia</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Select_All_Ecosystem_Integrations__c</fullName>
        <inlineHelpText>Please Select All Applicable Ecosystem Integrations</inlineHelpText>
        <label>Select All Ecosystem Integrations</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quest Diagnostics</fullName>
                </value>
                <value>
                    <fullName>2Morrow</fullName>
                </value>
                <value>
                    <fullName>Enrich</fullName>
                </value>
                <value>
                    <fullName>Sleepio</fullName>
                </value>
                <value>
                    <fullName>Monj</fullName>
                </value>
                <value>
                    <fullName>MyStrength</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_System_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source System Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specify_Account_Type_And_Vendor_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If Other, Specify Account Type And Vendor Details</inlineHelpText>
        <label>Specify Account Type And Vendor Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_Of_Customer_Contract__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please enter the intended launch date of the functionality.</inlineHelpText>
        <label>Start Date Of Customer Contract</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Castlight_Engage_Scoping_And_Standard</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Todays_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Todays Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Two_Year_Dental_Group_Numbers__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>FOR ANTHEM DENTAL ONLY
Provide group numbers for this client that should be used to obtain/provide. Separate Group numbers with commas.</inlineHelpText>
        <label>2 Year Dental Group Numbers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>